k8sversion/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: flask
  template:
    metadata:
      labels:
        component: flask
    spec:
      containers:
        - name: carflask
          # latest will be replaced by sed in travis 
          image: guestros/carflask:latest
          ports:
            - containerPort: 5000
