k8sversion/flask-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: flask
  ports:
    - port: 5000
      targetPort: 5000
