k8sversion/ingress-nginx-flask.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/issuer: letsencrypt-staging
    cert-manager.io/acme-challenge-type: http01
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - schutzmaskekaufen.at
      secretName: schutzmaskekaufen-at
  rules:
    - host: schutzmaskekdaufen.at
    - http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: flask-clusterip-service
                port: 
                  number: 5000
          # - path: /api/?(.*)
          # # UPDATE THIS LINE ABOVE
          #   backend:
          #     serviceName: server-cluster-ip-service
          #     servicePort: 5000
